# FAAS

./: .gitignore  .replit  Pipfile  README.md  get_random_quote.py  package-lock.json  package.json  pyproject.toml
.theia/: settings.json
api/: api.py
